--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.1",
     "hubot-slack": "^2.2.0",
-    "hubot-youtube": "^0.1.2"
+    "hubot-youtube": "^0.1.2",
+    "hubot-cron": ">=0.1.0"
   },
   "engines": {
     "node": "0.10.x"
