Run "npm install --save samurai20000/hubot-kurashinohinto" and add it to external-script.json

--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "description": "iebot",
   "dependencies": {
     "hubot": "^2.10.0",
+    "hubot-cron": ">=0.1.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.1.1",
     "hubot-google-translate": "^0.1.0",
     "hubot-help": "^0.1.1",
     "hubot-heroku-keepalive": "0.0.4",
+    "hubot-kurashinohinto": "git://github.com/samurai20000/hubot-kurashinohinto",
     "hubot-maps": "0.0.0",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.2",
@@ -18,8 +20,7 @@
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.1",
     "hubot-slack": "^2.2.0",
-    "hubot-youtube": "^0.1.2",
-    "hubot-cron": ">=0.1.0"
+    "hubot-youtube": "^0.1.2"
   },
   "engines": {
     "node": "0.10.x"
